--- a/src/collated/A0121628L.md
+++ b/src/collated/A0121628L.md
@@ -25,12 +25,10 @@ public class Storage {
 	private UserItemList userTaskList;
 	private ArrayList<Item> taskList;
 	
-	public String getStorageFilePath() {
-		return storageFilePath;
-	}
+
 
 	private long idCounter;
-	public static PrettyTimeParser timeParser;
+	public PrettyTimeParser timeParser;
 
 	// Gson Library objects to read settings and storage file in json format
 	final GsonBuilder GSON_ITEM_BUILDER = new GsonBuilder();
@@ -38,25 +36,12 @@ public class Storage {
 	private Gson gsonItem;
 	private Gson gsonSettings;
 
-	private static Logger logger = Logger.getLogger("Storage");
+	private Logger logger = Logger.getLogger("Storage");
 
 	public Storage() throws IOException {
 		
 	}
 	
-//	1. add <task>
-//	2. add <task> <mmm dd>
-//	3. add <task> <dd/mm/yyyy>
-//	4. add <task> <f:mmm dd> <mmm dd>
-//	5. add <task> <f:dd/mm/yyyy> <mmm dd>
-//	6. add <task> <f:mmm dd> <dd/mm/yyyy>
-//	7. add <task> <today/tomorrow/this week/month/year/ next week/month/year>
-//	8. add <task> <today/tomorrow/this week/month/year/ next week/month/year> <f:today/tomorrow/this week/month/year/ next week/month/year>
-//	9. add <task> <dd/mm/yyyy> <f:today/tomorrow/this week/month/year/ next week/month/year>
-//	10. add <task> <dd mmm> <f:today/tomorrow/this week/month/year/ next week/month/year>
-//	11. add <task> <today/tomorrow/this week/month/year/ next week/month/year><f:dd mmm>
-//	12.add <task> <today/tomorrow/this week/month/year/ next week/month/year><f:dd/mm/yyyy>
-
 	public void init() throws IOException {
 		initializeGsonObjects();
 		initializeSettings();
@@ -99,6 +84,9 @@ public class Storage {
 	public void setStorageFilePath(String storageFilePath) {
 		this.storageFilePath = storageFilePath;
 	}
+	public String getStorageFilePath() {
+		return storageFilePath;
+	}
 
 	// Initializing the GSON objects to read the storage text data file in JSON
 	private void initializeGsonObjects() {
@@ -110,7 +98,7 @@ public class Storage {
 		GSON_SETTINGS_BUILDER.registerTypeAdapter(Settings.class,
 				new SettingsAdapter());
 		GSON_SETTINGS_BUILDER.setPrettyPrinting();
-		gsonSettings = GSON_ITEM_BUILDER.create();
+		gsonSettings = GSON_SETTINGS_BUILDER.create();
 	}
 
 	private void initializeSettings() {
@@ -144,6 +132,7 @@ public class Storage {
 			setStorageFilePath(settings.getStoragePath());
 		}
 		// Check for storage file if do not exist create file
+		
 		checkStorageFile();
 		String storageString = FileHandler.getStringFromFile(storageFilePath,
 				StandardCharsets.UTF_8);
@@ -168,6 +157,7 @@ public class Storage {
 	// If Storage file do not exist make file
 	private boolean checkStorageFile() throws IOException {
 		if (!storageFile.exists()) {
+			storageFile.getParentFile().mkdirs();
 			storageFile.createNewFile();
 			return false;
 		}
@@ -178,6 +168,10 @@ public class Storage {
 	private boolean checkSettingsFile() throws IOException {
 		if (!settingsFile.exists()) {
 			settingsFile.createNewFile();
+			Settings defaultSettings = new Settings();
+			defaultSettings.setStoragePath(DEFAULT_STORAGE_FILE_PATH);
+			final String json = gsonSettings.toJson(defaultSettings);
+			FileHandler.writeStringToFile(settingsFile, json);
 		}
 		return true;
 	}
@@ -190,7 +184,6 @@ public class Storage {
 		}
 
 	}
-
 	// Use the Gson library to get a Storage object from String
 	private UserItemList deserializeStorageString(String jsonString) {
 		if (checkEmptyString(jsonString)) {
@@ -229,11 +222,7 @@ public class Storage {
 		FileHandler.writeStringToFile(storageFile, json);
 	}
 
-	public void setStoragePath(String storageFilePath) {
-		assert storageFilePath != null : "storageFilePath is invalid";
 
-		settings.setStoragePath(storageFilePath);
-	}
 
 	public void saveSettings() throws IOException {
 		assert settings != null : "Settings not set";
@@ -247,98 +236,133 @@ public class Storage {
 ``` java
  *
  */
+
 public class GsonTest {
 	// Basic example to show my teammates how the gson library works.
-	GsonBuilder gsonBuilder;
-	Gson gson;
-	UserItemList taskList;
-	Item task1;
-	Item task2;
+	// UserItemList objects for test
+	GsonBuilder GSON_ITEM_BUILDER;
+	Gson gsonItem;
+
+	UserItemList taskListInput;
+	Item item1;
+	Item item2;
 	long initialCounter;
+
+	// Settings Objects for test
+	GsonBuilder GSON_SETTINGS_BUILDER = new GsonBuilder();
+	Gson gsonSettings;
+	Settings settings;
+	private final String TEST_STORAGE_STRING = "TEST";
+
+	// Create a gson String builder to create a text . we register
+	// UserItemList to write this
+	// Object into a string. So a Gsonbuilder will create a instance of gson
+	// to do this.
+	@Before
 	public void initObjects() {
-		// Create a gson String builder to create a text . we register
-		// UserItemList to write this
-		// Object into a string. So a Gsonbuilder will create a instance of gson
-		// to do this.
-		gsonBuilder = new GsonBuilder();
-		gsonBuilder.registerTypeAdapter(UserItemList.class, new ItemAdapter());
-		gsonBuilder.setPrettyPrinting();
-		gson = gsonBuilder.create();
-		//Add userItemList data
-	    taskList = new UserItemList();
-	    task1 = new Item(1L,"Event","It is a sunny day", "High", "I want to swim","Done","red label",
-	    		new Date(), new Date());
-	    
-	    task2 = new Item(2L,"Task","It is a rainny day", "Medium", "I want to study","Undone"
-	    		,"blue label",  new Date(), new Date());
-	    initialCounter = 0L;
-	    taskList.setUserName("Wei Lip");
-	    taskList.setIdCounter(initialCounter);	    
-	    ArrayList<Item> tArray = new ArrayList<>();
-		tArray.add(task1);
-		tArray.add(task2);		
-		taskList.setTaskArray(tArray);
+		// Gson objects for UserItemList
+		GSON_ITEM_BUILDER = new GsonBuilder();
+		GSON_ITEM_BUILDER.registerTypeAdapter(UserItemList.class,
+				new ItemAdapter());
+		GSON_ITEM_BUILDER.setPrettyPrinting();
+		gsonItem = GSON_ITEM_BUILDER.create();
+		// Gson Objects for settings
+		final GsonBuilder GSON_SETTINGS_BUILDER = new GsonBuilder();
+		GSON_SETTINGS_BUILDER.registerTypeAdapter(Settings.class,
+				new SettingsAdapter());
+		GSON_SETTINGS_BUILDER.setPrettyPrinting();
+		gsonSettings = GSON_SETTINGS_BUILDER.create();
+
+		// Add userItemList data
+		taskListInput = new UserItemList();
+		item1 = new Item(1L, "Event", "It is a sunny day", "High",
+				"I want to swim", "Done", "red label", new Date(), new Date());
+
+		item2 = new Item(2L, "Task", "It is a rainny day", "Medium",
+				"I want to study", "Undone", "blue label", new Date(),
+				new Date());
+		initialCounter = 0L;
+		taskListInput.setUserName("Wei Lip");
+		taskListInput.setIdCounter(initialCounter);
+		ArrayList<Item> tArray = new ArrayList<>();
+		tArray.add(item1);
+		tArray.add(item2);
+		taskListInput.setTaskArray(tArray);
+
+		// Add Settings data
+		settings = new Settings();
+		settings.setStoragePath(TEST_STORAGE_STRING);
 	}
-	//Write into a json string with the gson library and test when we read the same string
-	//with the Gson library do we get the same object a not. 
+
+	/********************* Helper Methods **************************************/
+
+	public boolean isSameItemList(ArrayList<Item> listA, ArrayList<Item> listB) {
+		int lengthA = listA.size();
+		int lengthB = listB.size();
+		boolean sameList = true;
+		if (lengthA != lengthB) {
+			return false;
+		} else {
+			// Test every aspect of the item value are equals to each other
+			for (int i = 0; i < lengthA; i++) {
+				// If the previous item was not the same return false.
+				if (!sameList) {
+					return false;
+				}
+				Item currentItemA = listA.get(0);
+				Item currentItemB = listB.get(0);
+
+				sameList = currentItemA.getId().equals(currentItemB.getId());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+				sameList = currentItemA.getDescription().equals(
+						currentItemB.getDescription());
+				sameList = currentItemA.getLabel().equals(
+						currentItemB.getLabel());
+				sameList = currentItemA.getPriority().equals(
+						currentItemB.getPriority());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+			}
+			return sameList;
+		}
+
+	}
+
+	/********************* Unit Tests **************************************/
+	// Test the correct reading and writing of UserItemList object into the text
+	// file
 	@Test
-	public void testGson(){
-		initObjects();
-	    final String json = gson.toJson(taskList);
-	    System.out.println("Serialised");
-	    System.out.println(json);
-	    // get Object from above json string and test whether it writes to the object with same values
-	    //or not
-	    final UserItemList uItemListResult = gson.fromJson(json, UserItemList.class);
-	    System.out.println("\nDeserialised");
-	    assertEquals(uItemListResult.getUserName(), taskList.getUserName());
-	    assertEquals(uItemListResult.getIdCounter(), taskList.getIdCounter());
-//	    assertEquals(uItemListResult.getTaskArray(), taskList.getTaskArray());
-	    //Test whether the objects are the same a not
-	    //ITEM 1
-	    assertEquals(uItemListResult.getTaskArray().get(0).getDescription(), 
-	    		taskList.getTaskArray().get(0).getDescription());
-//	    assertEquals(uItemListResult.getTaskArray().get(0).getEndDate().compareTo(
-//	    		taskList.getTaskArray().get(0).getEndDate()), 0);
-	    assertEquals(uItemListResult.getTaskArray().get(0).getId(), 
-	    		taskList.getTaskArray().get(0).getId());
-	    assertEquals(uItemListResult.getTaskArray().get(0).getLabel(), 
-	    		taskList.getTaskArray().get(0).getLabel());
-	    assertEquals(uItemListResult.getTaskArray().get(0).getPriority(), 
-	    		taskList.getTaskArray().get(0).getPriority());
-//	    assertEquals(uItemListResult.getTaskArray().get(0).getStartDate(), 
-//	    		taskList.getTaskArray().get(0).getStartDate());
-	    assertEquals(uItemListResult.getTaskArray().get(0).getStatus(), 
-	    		taskList.getTaskArray().get(0).getStatus());
-	    assertEquals(uItemListResult.getTaskArray().get(0).getTitle(), 
-	    		taskList.getTaskArray().get(0).getTitle());
-	    assertEquals(uItemListResult.getTaskArray().get(0).getType(), 
-	    		taskList.getTaskArray().get(0).getType());
-	    //ITEM 2
-	    assertEquals(uItemListResult.getTaskArray().get(1).getDescription(), 
-	    		taskList.getTaskArray().get(1).getDescription());
-//	    assertEquals(uItemListResult.getTaskArray().get(1).getEndDate(), 
-//	    		taskList.getTaskArray().get(1).getEndDate());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getId(), 
-	    		taskList.getTaskArray().get(1).getId());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getLabel(), 
-	    		taskList.getTaskArray().get(1).getLabel());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getPriority(), 
-	    		taskList.getTaskArray().get(1).getPriority());
-//	    assertEquals(uItemListResult.getTaskArray().get(1).getStartDate(), 
-//	    		taskList.getTaskArray().get(1).getStartDate());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getStatus(), 
-	    		taskList.getTaskArray().get(1).getStatus());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getTitle(), 
-	    		taskList.getTaskArray().get(1).getTitle());
-	    assertEquals(uItemListResult.getTaskArray().get(1).getType(), 
-	    		taskList.getTaskArray().get(1).getType()); 
-	    
-	    
+	public void testGsonUserItemList() {
+		final String itemJson = gsonItem.toJson(taskListInput);
+
+		// get Object from above json string and test whether it writes to the
+		// object with same values or not
+		final UserItemList taskListOutput = gsonItem.fromJson(itemJson,
+				UserItemList.class);
+
+		assertEquals(taskListOutput.getUserName(), taskListInput.getUserName());
+		assertEquals(taskListOutput.getIdCounter(),
+				taskListInput.getIdCounter());
+		ArrayList<Item> taskList1 = taskListOutput.getTaskArray();
+		ArrayList<Item> taskList2 = taskListInput.getTaskArray();
+		assertTrue(isSameItemList(taskList1, taskList2));
 
 	}
 
+	// Test the correct reading and writing of Settings object into the text
+	// file
+	@Test
+	public void testGsonSettings() {
+		final String settingsJson = gsonSettings.toJson(settings);
 
+		final Settings settingsFromString = gsonSettings.fromJson(settingsJson,
+				Settings.class);
+		assertEquals(settingsFromString.getStoragePath(), TEST_STORAGE_STRING);
+
+	}
 }
 ```
 ###### Test\TestStorage.java
@@ -346,47 +370,206 @@ public class GsonTest {
  *
  */
 public class TestStorage {
-	// Initialized Gson items to test storage. 
-//	final GsonBuilder GSON_ITEM_BUILDER = new GsonBuilder();
-//	final GsonBuilder GSON_SETTINGS_BUILDER = new GsonBuilder();
-//	
-//	final String DEFAULT_FILE_DIRECTORY = "PomPom Storage & Settings";
-//	final String SETTINGS_FILE_NAME = "settings.txt";
-//	final String SETTINGS_FILE_PATH = DEFAULT_FILE_DIRECTORY
-//			+ "/" + SETTINGS_FILE_NAME;
-//	Gson gsonSettings;
-//	File settingsFile = new File(SETTINGS_FILE_PATH);
-//	Storage storageTest;
-//	
-//	Item t1 = new Item(1L,"EVENT", "Title 1", "High", "Tryin to test","Done","red label", new Date(), new Date());
-//	Item t2 = new Item(2L,"EVENT", "Title 2111", "Medium", "Tryin to test 2","Done","red label",  new Date(), new Date());
-//	
-//
-//	public void init() throws IOException{
-//		storageTest = new Storage();
-//		storageTest.init();
-//	}
+	// Storage directory for testing
+	private final String DEFAULT_FILE_DIRECTORY = "test";
+	private final String DEFAULT_FILE_NAME = "Storage.txt";
+	private final String DEFAULT_STORAGE_FILE_PATH_TESTING = DEFAULT_FILE_DIRECTORY
+			+ "/" + DEFAULT_FILE_NAME;
+
+	// Gson testing for reading and saving
+	GsonBuilder gsonItemBuilder;
+	Gson gsonItem;
+	UserItemList taskListInput;
+
+	Item item1;
+	Item item2;
+	Item item3 = new Item();
+	Item item4 = new Item();
+	Storage storageStub;
+	String originalStorageFilePath;
+
+	// Initialization of stub and item variables for adding later
+	@Before
+	public void initGson() {
+
+		// Create a gson String builder to create a text . we register
+		// UserItemList to write this
+		// Object into a string. So a Gsonbuilder will create a instance of gson
+		// to do this.
+		gsonItemBuilder = new GsonBuilder();
+		gsonItemBuilder.registerTypeAdapter(UserItemList.class,
+				new ItemAdapter());
+		gsonItemBuilder.setPrettyPrinting();
+		gsonItem = gsonItemBuilder.create();
+	}
+
+	@Before
+	public void initStorage() throws ParseException, IOException {
+		// Change the storage file path for testing to another folder so that it
+		// would
+		// not affect the actual folder data
+		storageStub = new Storage();
+		storageStub.init();
+		// Save the orignal file path and change back to it later
+		originalStorageFilePath = storageStub.getStorageFilePath();
+		// Create new storage for test
+		File testFile = new File(DEFAULT_STORAGE_FILE_PATH_TESTING);
+		testFile.delete();
+		// Set to testing location and initialize storage
+		storageStub.setStorageFilePath(DEFAULT_STORAGE_FILE_PATH_TESTING);
+		storageStub.saveSettings();
+		// Reinitialize storage with new storagefile
+		storageStub.init();
+
+		SimpleDateFormat sdf = new SimpleDateFormat("EEE, dd MMM yyyy HH:mm");
+		sdf.parse("Wed, 4 Jul 2016 12:08");
+
+		item1 = new Item(1L, "Event", "Swim", "High", "Nice day", "Done",
+				"red label", sdf.parse("Wed, 04 Jan 2016 12:08"),
+				sdf.parse("Wed, 30 Jan 2016 12:08"));
+
+		item2 = new Item(2L, "Task", "Sleep", "Medium", "yawn", "Undone",
+				"blue label", sdf.parse("Wed, 04 Jul 2016 12:08"),
+				sdf.parse("Wed, 11 Jul 2016 12:08"));
+
+		item2 = new Item(3L, "Task", "Fight", "Medium", "Muay thai", "Undone",
+				"blue label", sdf.parse("Wed, 01 Jul 2016 12:08"),
+				sdf.parse("Wed, 10 Jul 2016 12:08"));
+
+		item2 = new Item(4L, "Task", "Mug", "Medium", "I want to study",
+				"Undone", "blue label", new Date(), new Date());
+	}
+
+	/********************* Helper Methods * @throws IOException **************************************/
+	public boolean isSameItemList(ArrayList<Item> listA, ArrayList<Item> listB) {
+		int lengthA = listA.size();
+		int lengthB = listB.size();
+		boolean sameList = true;
+		if (lengthA != lengthB) {
+			return false;
+		} else {
+			// Test every aspect of the item value are equals to each other
+			for (int i = 0; i < lengthA; i++) {
+				// If the previous item was not the same return false.
+				if (!sameList) {
+					return false;
+				}
+				Item currentItemA = listA.get(0);
+				Item currentItemB = listB.get(0);
+
+				sameList = currentItemA.getId().equals(currentItemB.getId());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+				sameList = currentItemA.getDescription().equals(
+						currentItemB.getDescription());
+				sameList = currentItemA.getLabel().equals(
+						currentItemB.getLabel());
+				sameList = currentItemA.getPriority().equals(
+						currentItemB.getPriority());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+				sameList = currentItemA.getTitle().equals(
+						currentItemB.getTitle());
+			}
+			return sameList;
+		}
+
+	}
+
+	/********************* UNIT TEST CASES * @throws IOException **************************************/
+	// tests whether the file specified will be created when the constructor is
+	// called.
+
+	@Test
+	public void testInitialization() throws IOException {
+		Storage testStorage = new Storage();
+		testStorage.init();
+		assertNotNull(testStorage.getIdCounter());
+		assertNotNull(testStorage.getStorageFilePath());
+		assertNotNull(testStorage.getTaskList());
+		assertNotNull(testStorage.getUserTaskList());
+	}
+
 	// Test whether getIdCounter increments itself a not
 	@Test
-	public void correctIdRead() throws IOException{
-		Storage testStorage = new Storage();
-		testStorage.init();
-		assertEquals(testStorage.getUserTaskList().getIdCounter() + 1, testStorage.getIdCounter());
+	public void correctIdRead() throws IOException {
+		assertEquals(storageStub.getUserTaskList().getIdCounter() + 1,
+				storageStub.getIdCounter());
 	}
-	// Check whether we can write the correct storage file path to storage a not
+
+	// The code to initialize the storageFilePath is done in the method
+	// initstorage
+	// now we will just check whether the path is set correctly a not
 	@Test
-	public void testWriteToProperties() throws SecurityException, IOException {
-		Storage testStorage = new Storage();
-		testStorage.init();
-		final String TEST_FILE_PATH = "test/Testing";
-		testStorage.setStorageFilePath(TEST_FILE_PATH);
-		//testStorage.saveSettings();
-		assertEquals(testStorage.getStorageFilePath(), TEST_FILE_PATH);
+	public void testWriteToSettings() throws SecurityException, IOException {
+		assertEquals(storageStub.getStorageFilePath(),
+				DEFAULT_STORAGE_FILE_PATH_TESTING);
 	}
-	
 
-	
+	// We add the items to storage and save it. And test whether we can get back
+	// the same items
+	// using our gson file reader.
+	@Test
+	public void testAddAndSave() throws IOException {
+		storageStub.getTaskList().add(item1);
+		storageStub.getTaskList().add(item2);
+		storageStub.getTaskList().add(item3);
+		storageStub.getTaskList().add(item4);
+		storageStub.saveStorage();
+		// Read Storage file at location storageFilePath(Tested above) and
+		// check for equivalence by reading storage file with Gson
+		String jsonUserItemList = FileHandler.getStringFromFile(
+				DEFAULT_STORAGE_FILE_PATH_TESTING, StandardCharsets.UTF_8);
+		UserItemList taskListOutput = gsonItem.fromJson(jsonUserItemList,
+				UserItemList.class);
+		assertTrue(isSameItemList(storageStub.getTaskList(),
+				taskListOutput.getTaskArray()));
+	}
 
+	@Test
+	public void testDeleteAndSave() throws IOException {
+		storageStub.getTaskList().add(item1);
+		storageStub.getTaskList().add(item2);
+		storageStub.getTaskList().add(item3);
+		storageStub.getTaskList().add(item4);
+		storageStub.getTaskList().remove(2);
+		storageStub.getTaskList().remove(1);
+		storageStub.saveStorage();
+
+		// Same code as above to check for equivalence
+		String jsonUserItemList = FileHandler.getStringFromFile(
+				DEFAULT_STORAGE_FILE_PATH_TESTING, StandardCharsets.UTF_8);
+		UserItemList taskListOutput = gsonItem.fromJson(jsonUserItemList,
+				UserItemList.class);
+		assertTrue(isSameItemList(storageStub.getTaskList(),
+				taskListOutput.getTaskArray()));
+	}
+
+	@Test
+	public void testEditAndSave() throws IOException {
+		storageStub.getTaskList().add(item1);
+		storageStub.getTaskList().add(item2);
+		storageStub.getTaskList().add(item3);
+		storageStub.getTaskList().add(item4);
+		storageStub.getTaskList().get(0).setTitle("Testing title");
+		storageStub.getTaskList().get(0).setTitle("Testing title 2");
+		storageStub.saveStorage();
+
+		// Same code as above to check for equivalence
+		String jsonUserItemList = FileHandler.getStringFromFile(
+				DEFAULT_STORAGE_FILE_PATH_TESTING, StandardCharsets.UTF_8);
+		UserItemList taskListOutput = gsonItem.fromJson(jsonUserItemList,
+				UserItemList.class);
+		assertTrue(isSameItemList(storageStub.getTaskList(),
+				taskListOutput.getTaskArray()));
+	}
+
+	// Change back the settings of the original User or tester
+	@After
+	public void returnToOriginalSettings() throws IOException {
+		storageStub.setStorageFilePath(originalStorageFilePath);
+		storageStub.saveSettings();
+	}
 }
 ```
 ###### utils\CheckBoxCellFactory.java
@@ -400,17 +583,6 @@ public class CheckBoxCellFactory implements Callback {
         
         return checkBoxCell;
     }
-}
-```
-###### utils\EventItem.java
-``` java
- *
- */
-public class EventItem extends Item{
-	public final static String EVENT_TYPE = "EVENT";
-	public EventItem() {
-		setType(EVENT_TYPE);
-	}
 }
 ```
 ###### utils\FileHandler.java
@@ -446,11 +618,10 @@ public class Item implements Comparator<Item> {
 	private Date startDate;
 	private Date endDate;
 	private Boolean checkBox;
-	
-	//Check box code for testing for now
+
+	// Check box code for testing for now
 	private SimpleBooleanProperty checked = new SimpleBooleanProperty(false);
 
-	
 	public SimpleBooleanProperty checkedProperty() {
 		return this.checked;
 	}
@@ -463,8 +634,6 @@ public class Item implements Comparator<Item> {
 		this.checkedProperty().set(checked);
 	}
 
-	
-	
 	public Item(Long id, String type, String title, String priority,
 			String description, String status, String label, Date startDate,
 			Date endDate) {
@@ -579,6 +748,8 @@ public class Item implements Comparator<Item> {
 		System.out.println("");
 	}
 
+
+
 	@Override
 	public int compare(Item item1, Item item2) {
 		if (item2 == null) {
@@ -589,9 +760,11 @@ public class Item implements Comparator<Item> {
 		}
 		if (item1.getEndDate().compareTo(item2.getEndDate()) > 0) {
 			return 1;
-		} else if (item1.getEndDate().compareTo(item2.getEndDate()) < 0) {
+		}
+		else if (item1.getEndDate().compareTo(item2.getEndDate()) < 0) {
 			return -1;
-		} else if (item1.getEndDate().compareTo(item2.getEndDate()) == 0) {
+		} 
+		else if (item1.getEndDate().compareTo(item2.getEndDate()) == 0) {
 			return 0;
 		}
 		return 0;
@@ -718,12 +891,6 @@ public class ItemAdapter extends TypeAdapter<UserItemList> {
 public class ListClassifier {
 
 	private ArrayList<Item> taskArrayList; 
-	
-	public ListClassifier() {
-		this.taskArrayList = POMPOM.getStorage().getTaskList();
-	}
-	
-	
 	
 	// 
 	public static ArrayList<Item> getDoneTaskList(ArrayList<Item> lst){
@@ -872,7 +1039,7 @@ public class SettingsAdapter extends TypeAdapter<Settings>{
 				settings.setStoragePath(in.nextString());
 			}
 		}
-		in.close();
+		in.endObject();
 		return settings;
 	}
 
@@ -880,20 +1047,10 @@ public class SettingsAdapter extends TypeAdapter<Settings>{
 	public void write(JsonWriter out, Settings settings) throws IOException {
 		out.beginObject();
 		out.name("StoragePath").value(settings.getStoragePath());
+		out.endObject();
 		out.close();
 	}
 
-}
-```
-###### utils\TaskItem.java
-``` java
- *
- */
-public class TaskItem extends Item{
-	public final static String TASK_TYPE = "TASK";
-	public TaskItem() {
-		setType(TASK_TYPE);
-	}
 }
 ```
 ###### utils\UserItemList.java
