Final commit to fix all bugs and do extensive automated testing, dog fooding and some debugging. Glad to say the product is good to go. #v0.5 #Finish #Give chance when marking # Be nice.

--- a/collated/A0121528M.md
+++ b/collated/A0121528M.md
@@ -1,16 +1,16 @@
 # A0121528M
-###### command\AddCommand.java
+###### src\command\AddCommand.java
 ``` java
  */
 public class AddCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_TASK_ADDED = "%s added";
+	public static final String MESSAGE_TASK_ADDED = "%s added";
 
 	/** Command parameters **/
 	private Item task;
 	private boolean isUndo;
-
+	
 	/**
 	 * Constructor for a normal add command
 	 * 
@@ -205,13 +205,13 @@ public class AddCommand extends Command {
 
 }
 ```
-###### command\AddRecurringCommand.java
+###### src\command\AddRecurringCommand.java
 ``` java
  */
 public class AddRecurringCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_RECURRING = "Recurring tasks has been added";
+	public static final String MESSAGE_RECURRING = "Recurring tasks has been added";
 
 	/** Command Parameters **/
 	ArrayList<AddCommand> addList;
@@ -331,7 +331,7 @@ public class AddRecurringCommand extends Command {
 
 }
 ```
-###### command\Command.java
+###### src\command\Command.java
 ``` java
  */
 public abstract class Command {
@@ -343,7 +343,7 @@ public abstract class Command {
 
 	public Command() {
 
-	}
+	} 
 
 	/**
 	 * Method to get the item with the specified taskId. 
@@ -355,7 +355,7 @@ public abstract class Command {
 	protected Item getTask(Long taskId) {
 		ArrayList<Item> taskList = getTaskList();
 		for (int i = 0; i < taskList.size(); i++) {
-			if (taskList.get(i).getId() == taskId) {
+			if (taskList.get(i).getId().equals(taskId)) {
 				return taskList.get(i);
 			}
 		}
@@ -384,7 +384,6 @@ public abstract class Command {
 		Item toDelete = null;
 		try {
 			toDelete = getTask(taskId);
-
 		} catch (IndexOutOfBoundsException e) {
 
 		}
@@ -431,14 +430,14 @@ public abstract class Command {
 
 }
 ```
-###### command\DelCommand.java
+###### src\command\DelCommand.java
 ``` java
  */
 public class DelCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_TASK_DELETED = "%1s has been deleted from %2s";
-	private static final String MESSAGE_ID_INVALID = "%s is not a valid ID!";
+	public static final String MESSAGE_TASK_DELETED = "%1s has been deleted from %2s";
+	public static final String MESSAGE_ID_INVALID = "%s is not a valid ID!";
 
 	/** Command Parameters **/
 	private Long taskId;
@@ -452,7 +451,7 @@ public class DelCommand extends Command {
 	 * 
 	 * @param taskId
 	 */
-	public DelCommand(long taskId) {
+	public DelCommand(Long taskId) {
 		this.taskId = taskId;
 		this.isUndo = false;
 		this.toDelete = getTask(taskId);
@@ -518,7 +517,7 @@ public class DelCommand extends Command {
 
 		Item currentTask = getTask(toDelete.getId());
 
-		Item prevTask = getTask(currentTask.getPrevId());
+		Item prevTask = getTask(currentTask.getPrevId()); 
 		prevTask.setNextId(currentTask.getNextId());
 
 		Item nextTask = getTask(currentTask.getNextId());
@@ -586,13 +585,15 @@ public class DelCommand extends Command {
 	}
 }
 ```
-###### command\DelRecurringCommand.java
+###### src\command\DelRecurringCommand.java
 ``` java
  */
 public class DelRecurringCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_DELETE_RECURRING = "A series of recurring tasks has been deleted";
+	public static final String MESSAGE_DELETE_RECURRING = "A series of recurring tasks has been deleted";
+	public static final String MESSAGE_DELETE_RECUR_ERROR = "%s is not a reuccring task!";
+	public static final String MESSAGE_INVALID = "%s is not a valid ID!";
 	
 	/** Command Parameters **/
 	private Long taskId;
@@ -668,10 +669,22 @@ public class DelRecurringCommand extends Command {
 		if (!isUndo) {
 			
 			Long firstId = taskId;
-			Item firstTask = getTask(firstId);
+			Item firstTask = getTask(firstId); 
+			
+			
+			if(firstTask == null){
+				return String.format(MESSAGE_INVALID, firstId);
+			} 			
+			
+			if(!firstTask.isRecurring()|| firstTask.getId() == null){
+				returnMsg = String.format(MESSAGE_DELETE_RECUR_ERROR, firstId);
+				return returnMsg;
+			}
+			
 			while (true) {
 				
 				Item currentTask = getTask(taskId);
+				
 				addList.add(currentTask);
 					
 				Long nextId = getTask(taskId).getNextId();
@@ -682,7 +695,7 @@ public class DelRecurringCommand extends Command {
 					break;
 				}
 				
-			}
+			} 
 			
 			updateUndoStack();
 			POMPOM.refreshStatus();
@@ -693,14 +706,14 @@ public class DelRecurringCommand extends Command {
 			
 		} else {
 			
-			Item toDelete = getTask(idList[0]);
+			Item firstTask = getTask(idList[0]);
 			for (int i = 0; i < idList.length; i++) {
 				Long currentId = idList[i];
 				removeTask(currentId);
 			}
 			
 			POMPOM.refreshStatus();
-			showCorrectTab(toDelete);
+			showCorrectTab(firstTask);
 			
 			returnMsg = MESSAGE_DELETE_RECURRING;
 			return returnMsg;
@@ -710,15 +723,15 @@ public class DelRecurringCommand extends Command {
 
 }
 ```
-###### command\EditCommand.java
+###### src\command\EditCommand.java
 ``` java
  */
 public class EditCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_TASK_EDITED = "%s was successfully edited";
-	private static final String MESSAGE_TASK_ERROR = "%s is not a valid ID!";
-	private static final String MESSAGE_DATE_CHANGE_ERROR = "Start date must be earlier then end date";
+	public static final String MESSAGE_TASK_EDITED = "%s was successfully edited";
+	public static final String MESSAGE_TASK_ERROR = "%s is not a valid ID!";
+	public static final String MESSAGE_DATE_CHANGE_ERROR = "Start date must be earlier then end date";
 
 	/** Input Field Types **/
 	private static final String FIELD_TYPE = "type";
@@ -731,7 +744,7 @@ public class EditCommand extends Command {
 	private static final String FIELD_END_DATE = "end date";
 
 	/** Command Parameters **/
-	public long taskId;
+	public Long taskId;
 	private String field;
 	private String newData;
 	private Date newDate;
@@ -746,7 +759,7 @@ public class EditCommand extends Command {
 	 * @param field
 	 * @param newData
 	 */
-	public EditCommand(long taskId, String field, String newData) {
+	public EditCommand(Long taskId, String field, String newData) {
 		this.taskId = taskId;
 		this.task = getTask(taskId);
 		this.field = field;
@@ -763,7 +776,7 @@ public class EditCommand extends Command {
 	 * @param field
 	 * @param newDate
 	 */
-	public EditCommand(long taskId, String field, Date newDate) {
+	public EditCommand(Long taskId, String field, Date newDate) {
 		this.taskId = taskId;
 		this.task = getTask(taskId);
 		this.field = field;
@@ -781,7 +794,7 @@ public class EditCommand extends Command {
 	 * @param newData
 	 * @param isUndo
 	 */
-	public EditCommand(long taskId, String field, String newData, boolean isUndo) {
+	public EditCommand(Long taskId, String field, String newData, boolean isUndo) {
 		this.taskId = taskId;
 		this.task = getTask(taskId);
 		this.field = field;
@@ -799,7 +812,7 @@ public class EditCommand extends Command {
 	 * @param newDate
 	 * @param isUndo
 	 */
-	public EditCommand(long taskId, String field, Date newDate, boolean isUndo) {
+	public EditCommand(Long taskId, String field, Date newDate, boolean isUndo) {
 		this.taskId = taskId;
 		this.task = getTask(taskId);
 		this.field = field;
@@ -934,13 +947,14 @@ public class EditCommand extends Command {
 
 }
 ```
-###### command\EditRecurringCommand.java
+###### src\command\EditRecurringCommand.java
 ``` java
  */
 public class EditRecurringCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_DELETE_RECURRING = "A series of recurring tasks has been edited";
+	public static final String MESSAGE_EDIT_RECURRING = "A series of recurring tasks has been edited";
+	public static final String MESSAGE_EDIT_RECUR_ERROR = "%s is not a reuccring task!";
 
 	/** Input Field Types **/
 	private static final String FIELD_TITLE = "title";
@@ -981,7 +995,8 @@ public class EditRecurringCommand extends Command {
 	 * @param field
 	 * @param oldData
 	 */
-	public EditRecurringCommand(Long taskId, String field, ArrayList<String> oldData) {
+	public EditRecurringCommand(Long taskId, String field,
+			ArrayList<String> oldData) {
 		this.taskId = taskId;
 		this.field = field;
 		this.oldData = oldData;
@@ -1074,59 +1089,65 @@ public class EditRecurringCommand extends Command {
 	 */
 	public String execute() {
 
-		if (!isUndo) {
+		this.firstId = taskId;
+		Item firstTask = getTask(firstId);
 
-			this.firstId = taskId;
-			while (taskId != null) {
-				Item currentTask = getTask(taskId);
+		if (firstTask.isRecurring()) {
+			if (!isUndo) {
 
-				Long nextId = currentTask.getNextId();
-				updateChanges(taskId);
-				taskId = nextId;
+				while (taskId != null) {
+					Item currentTask = getTask(taskId);
 
-				if (taskId.equals(firstId)) {
-					break;
+					Long nextId = currentTask.getNextId();
+					updateChanges(taskId);
+					taskId = nextId;
+
+					if (taskId.equals(firstId)) {
+						break;
+					}
 				}
+
+				updateUndoStack();
+				POMPOM.refreshStatus();
+				showCorrectTab(firstTask);
+
+				returnMsg = MESSAGE_EDIT_RECURRING;
+				return returnMsg;
+
+			} else {
+
+				Long firstId = taskId;
+				int counter = 0;
+
+				while (taskId != null) {
+					Long nextId = getTask(taskId).getNextId();
+					updateChanges(taskId, oldData.get(counter));
+					taskId = nextId;
+					counter++;
+
+					if (taskId.equals(firstId)) {
+						break;
+					}
+				}
+
+				POMPOM.refreshStatus();
+				showCorrectTab(firstTask);
+
+				returnMsg = MESSAGE_EDIT_RECURRING;
+				return returnMsg;
+
 			}
-
-			updateUndoStack();
-			POMPOM.refreshStatus();
-			Item firstTask = getTask(firstId);
-			showCorrectTab(firstTask);
-
-			returnMsg = MESSAGE_DELETE_RECURRING;
-			return returnMsg;
-
 		} else {
 
-			Long firstId = taskId;
-			int counter = 0;
-			
-			while (taskId != null) {
-				Long nextId = getTask(taskId).getNextId();
-				updateChanges(taskId, oldData.get(counter));
-				taskId = nextId;
-				counter++;
-
-				if (taskId.equals(firstId)) {
-					break;
-				}
-			}
-
-			POMPOM.refreshStatus();
-			Item firstTask = getTask(firstId);
-			showCorrectTab(firstTask);
-
-			returnMsg = MESSAGE_DELETE_RECURRING;
+			returnMsg = String.format(MESSAGE_EDIT_RECUR_ERROR, firstId);
 			return returnMsg;
-
 		}
 
 	}
 
 }
 ```
-###### command\ExitCommand.java
+###### src\command\ExitCommand.java
 ``` java
  */
 public class ExitCommand extends Command{
@@ -1154,7 +1175,7 @@ public class ExitCommand extends Command{
 	}
 }
 ```
-###### command\HelpCommand.java
+###### src\command\HelpCommand.java
 ``` java
  */
 public class HelpCommand extends Command {
@@ -1179,7 +1200,7 @@ public class HelpCommand extends Command {
 	}
 }
 ```
-###### command\InvalidCommand.java
+###### src\command\InvalidCommand.java
 ``` java
  */
 public class InvalidCommand extends Command {
@@ -1206,7 +1227,7 @@ public class InvalidCommand extends Command {
 
 }
 ```
-###### command\PathCommand.java
+###### src\command\PathCommand.java
 ``` java
  */
 public class PathCommand extends Command {
@@ -1249,7 +1270,7 @@ public class PathCommand extends Command {
 	
 }
 ```
-###### command\SearchCommand.java
+###### src\command\SearchCommand.java
 ``` java
  */
 public class SearchCommand extends Command {
@@ -1425,14 +1446,14 @@ public class SearchCommand extends Command {
 
 }
 ```
-###### command\UndoCommand.java
+###### src\command\UndoCommand.java
 ``` java
  */
 public class UndoCommand extends Command {
 
 	/** Messaging **/
-	private static final String MESSAGE_UNDO = "Previous action has been successfully undone";
-	private static final String MESSAGE_ERROR = "There is nothing to undo";
+	public static final String MESSAGE_UNDO = "Previous action has been successfully undone";
+	public static final String MESSAGE_ERROR = "There is nothing to undo";
 
 	/**
 	 * Executes all the actions needed when an UndoCommand is invoked
@@ -1459,7 +1480,7 @@ public class UndoCommand extends Command {
 
 }
 ```
-###### command\ViewCommand.java
+###### src\command\ViewCommand.java
 ``` java
  */
 public class ViewCommand extends Command {
@@ -1521,7 +1542,7 @@ public class ViewCommand extends Command {
 
 }
 ```
-###### main\POMPOM.java
+###### src\main\POMPOM.java
 ``` java
  *
  */
@@ -1609,7 +1630,6 @@ public class POMPOM {
 			} else {
 				
 				if (isNotCompleted(currentTask)) {
-					System.out.println(taskStartDate + "ASDAS");
 					if (currentDate.before(taskStartDate)) {
 						currentTask.setStatus(STATUS_PENDING);
 					} else if (currentDate.after(taskStartDate) && currentDate.before(taskEndDate)) {
@@ -1682,13 +1702,13 @@ public class POMPOM {
 
 }
 ```
-###### Test\TestCommand.java
+###### src\Test\TestCommand.java
 ``` java
  *
  */
 public class TestCommand {
 
-	/** Parameters **/
+	/** Parameters **/ 
 	POMPOM pompom;
 	ArrayList<Item> taskList;
 	Date currentDate;
@@ -2039,11 +2059,11 @@ public class TestCommand {
 	public void testAddRecurring() {
 
 		// add recurring tasks using POMPOM class to populating the tasks
-		String returnMsg = pompom.execute("add do project f:4 apr e:5 apr r:weekly until 26 apr");
-
+		String returnMsg = pompom.execute("add do project f:4 apr e:5 apr r:daily until 6 apr");
+ 
 		// check if the correct status message is returned
 		assertEquals("Recurring tasks has been added", returnMsg);
-
+ 
 		// check if the correct number of tasks has been added
 		assertEquals(3, taskList.size());
 
@@ -2274,7 +2294,7 @@ public class TestCommand {
 
 		// check if all recurring tasks have been removed by undo
 		assertEquals(0, taskList.size());
-
+     
 	}
 
 	@Test
@@ -2364,7 +2384,7 @@ public class TestCommand {
 	}
 }
 ```
-###### Test\TestPOMPOM.java
+###### src\Test\TestPOMPOM.java
 ``` java
  */
 public class TestPOMPOM {
